# hx

./: .gitignore  AGENTS.md  BENCHMARK.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  plan.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: adoption.md  benchmarking.md  codex.md  contracts.md  gemini.md  hex.md  memory.md  metrics.md  release.md  roadmap.md  security.md
examples/: benchmark_battery.json
src/hx/: agent.py  audit.py  authz.py  benchmark.py  bootstrap.py  cli.py  codex_integration.py  config.py  gemini_integration.py  hexmap.py  mcp_server.py  memory.py  metrics.py  models.py  onboard.py  parents.py  patches.py  planner.py  policy.py  ports.py  proof.py  providers.py  readiness.py  reasoning.py  replay.py  repo_ops.py  scheduler.py  setup.py  status.py  stream.py  suggest.py  templates.py  tools.py  ui.py  wizard.py
tests/: test_agent.py  test_benchmark.py  test_bootstrap.py  test_gemini_integration.py  test_governance.py  test_hexmap.py  test_init.py  test_invariants.py  test_math_improvements.py  test_mcp_stdio.py  test_mcp_tools.py  test_memory.py  test_metrics.py  test_onboard.py  test_planner.py  test_providers.py  test_readiness.py  test_reasoning.py  test_repo_ops.py  test_setup.py  test_smoke.py  test_status.py  test_suggest.py  test_token_opts.py  test_tools.py  test_v15_audit.py  test_v15_config.py  test_v15_models.py  test_v15_security.py  test_v15_surface.py  test_wizard.py
